--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Syne:wght@800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Syne:wght@800&display=swap" rel="stylesheet">
 
   <title>Potencia.AI</title>
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root" className="dark"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
